frontend/src/sass/main.scss
@import "bootstrap/scss/functions";
@import "bootstrap/scss/mixins";
@import "variables";

@import "@fontsource/roboto-slab/latin-300.css";

@import "svg";
@import "transitions";

body, html {
    margin: 0;
    width: 100%;
    height: 100%;
    padding: 0;

    color: white;

    background: url('../assets/black-orchid.png') #222;

    -webkit-tap-highlight-color: fade-out(white, .8);
}

h1, h2, h3, h4, h5, h6 {
    margin: 0 0 35px;

    letter-spacing: 1px;
}

p {
    margin: 0 0 25px;

    font-size: 16px;
    line-height: 1.5;

    @include media-breakpoint-up(md) {
        font-size: 18px;
        line-height: 1.6;

        margin: 0 0 35px;
    }
}

a {
    transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;

    color: $primary;
    &:focus,
    &:hover {
        text-decoration: none;
        color: lighten($primary, 20%);
    }
}

:not(input, textarea)::selection {
    background: #fcfcfc;
    background: fade-out(white, .8);
    text-shadow: none;
}

#app {
    padding-bottom: 100px;
    overflow-x: hidden;

    @include media-breakpoint-down(xs) {
        padding-bottom: 150px;
    }
}

nav.navbar {
    background-color: transparent;
    border-bottom: 1px solid transparent;

    .navbar-toggler {
        background-color: rgba($gray-900, 0.45);
        border: 1px solid white;
        padding: 11px;

        font-size: 14px;
        color: white;
    }

    transition: background 0.3s ease-in-out, padding-top 0.3s ease-in-out, padding-bottom 0.3s ease-in-out, border-bottom-color 0.3s ease-in-out;

    @include media-breakpoint-down(md) {
        &:has(.navbar-toggler[aria-expanded=true]) {
            background-color: rgba($gray-900, 0.85) !important;
            border-bottom: 1px solid fade-out(white, .8);
            backdrop-filter: blur(10px);
        }
    }

    .navbar-brand {
        font-family: $font-family-serif;
        font-weight: $font-weight-light;
    }

    .nav-item {
        text-align: center;
        margin: auto 10px;

        a:hover, a.active {
            color: $white;
        }
    }

    @include media-breakpoint-up(md) {
        padding-top: 20px;
        padding-bottom: 20px;

        &.navbar-shrink {
            padding-top: 10px;
            padding-bottom: 10px;
        }

        .nav-link.active {
            background-color: rgba(white, .3);
            outline: none;

            &:hover {
                color: white;
            }
        }
    }

    &.navbar-shrink:not(.minimal) {
        background-color: rgba($gray-900, 0.65);
        backdrop-filter: blur(10px);
        border-bottom: 1px solid fade-out(white, .8);
    }
}

footer {
    position: absolute;
    bottom: 0;

    transition: opacity, 0.3s ease-in-out;

    border-top: 1px solid fade-out(white, .7);
    width: 100%;
    padding: 20px 0;

    background-color: $gray-900;

    &.minimal {
        opacity: 0;
        pointer-events: none;
    }
}

.content-section {
    padding-top: 100px;
}

.vue-map-container {
    height: 300px;

    @include media-breakpoint-up(lg) {
        height: 500px;
    }
}

